--- a/public/admin.html
+++ b/public/admin.html
@@ -1,218 +1,254 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Empower your business with ANSH INFOTECH, Ludhiana's top IT solutions provider. From development to cybersecurity, AI to digital marketing, we got you covered!">
-  <title>Admin - ANSH InfoTech: Leading IT Solutions in Ludhiana</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <!-- AOS -->
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-  <style>
-    /* Custom Styles */
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f8f9fa;
-      margin: 0;
-      padding: 0;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Empower your business with ANSH INFOTECH, Ludhiana's top IT solutions provider. From development to cybersecurity, AI to digital marketing, we got you covered!"
+    />
+    <title>Admin - ANSH InfoTech: Leading IT Solutions in Ludhiana</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <style>
+      /* Custom Styles */
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #f8f9fa;
+        margin: 0;
+        padding: 0;
+      }
 
-    .sidebar {
-      position: fixed;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 250px;
-      background-color: #343a40;
-      color: #fff;
-      padding-top: 20px;
-    }
+      .sidebar {
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 250px;
+        background-color: #343a40;
+        color: #fff;
+        padding-top: 20px;
+      }
 
-    .sidebar ul {
-      list-style: none;
-      padding-left: 0;
-    }
+      .sidebar ul {
+        list-style: none;
+        padding-left: 0;
+      }
 
-    .sidebar ul li {
-      padding: 10px 20px;
-      border-bottom: 1px solid #5a6268;
-    }
+      .sidebar ul li {
+        padding: 10px 20px;
+        border-bottom: 1px solid #5a6268;
+      }
 
-    .sidebar ul li:last-child {
-      border-bottom: none;
-    }
+      .sidebar ul li:last-child {
+        border-bottom: none;
+      }
 
-    .sidebar ul li a {
-      color: #fff;
-      text-decoration: none;
-    }
+      .sidebar ul li a {
+        color: #fff;
+        text-decoration: none;
+      }
 
-    .sidebar ul li a:hover {
-      color: #ffc107;
-    }
+      .sidebar ul li a:hover {
+        color: #ffc107;
+      }
 
-    .content {
-      margin-left: 250px;
-      padding: 20px;
-    }
+      .content {
+        margin-left: 250px;
+        padding: 20px;
+      }
 
-    .header {
-      background-color: #212529;
-      color: #fff;
-      padding: 10px;
-      text-align: center;
-    }
+      .header {
+        background-color: #212529;
+        color: #fff;
+        padding: 10px;
+        text-align: center;
+      }
 
-    .enquiry,
-    .contact {
-      margin-bottom: 20px;
-      padding: 20px;
-      background-color: #fff;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
+      .enquiry,
+      .contact {
+        margin-bottom: 20px;
+        padding: 20px;
+        background-color: #fff;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      }
 
-    .enquiry h2,
-    .contact h2 {
-      color: #333;
-      margin-bottom: 10px;
-    }
+      .enquiry h2,
+      .contact h2 {
+        color: #333;
+        margin-bottom: 10px;
+      }
 
-    .enquiry p,
-    .contact p {
-      color: #666;
-    }
-  </style>
-</head>
-<body>
-  <div class="sidebar">
-    <ul>
-      <li><a href="#enquiryDetailsContainer">Enquiries</a></li>
-      <li><a href="#contactusContainer">Contact Messages</a></li>
-      <!-- Add more links for other sections if needed -->
-    </ul>
-  </div>
-
-  <div class="content">
-    <div class="header">
-      <h1>Admin Dashboard</h1>
+      .enquiry p,
+      .contact p {
+        color: #666;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="sidebar">
+      <ul>
+        <li><a href="#enquiryDetailsContainer">Enquiries</a></li>
+        <li><a href="#contactusContainer">Contact Messages</a></li>
+        <!-- Add more links for other sections if needed -->
+      </ul>
     </div>
 
-    <div id="enquiryDetailsContainer" class="enquiries-section">
-      <!-- Enquiries will be loaded here -->
+    <div class="content">
+      <div class="header">
+        <h1>Admin Dashboard</h1>
+      </div>
+
+      <div id="enquiryDetailsContainer" class="enquiries-section">
+        <!-- Enquiries will be loaded here -->
+      </div>
+
+      <div id="contactusContainer" class="contact-messages-section">
+        <!-- Contact messages will be loaded here -->
+      </div>
     </div>
 
-    <div id="contactusContainer" class="contact-messages-section">
-      <!-- Contact messages will be loaded here -->
-    </div>
-  </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-  <!-- AOS -->
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>
-    AOS.init();
-  
-    const enquiryContainer = document.getElementById("enquiryDetailsContainer");
-    const contactContainer = document.getElementById("contactusContainer");
-  
-    const enquiryLink = document.querySelector('a[href="#enquiryDetailsContainer"]');
-    const contactLink = document.querySelector('a[href="#contactusContainer"]');
-  
-    enquiryLink.addEventListener('click', function(event) {
-      event.preventDefault();
-      fetchData("https://ait-1.onrender.com/api/allenquiries", enquiryContainer);
-      contactContainer.style.display = "none";
-      enquiryContainer.style.display = "block";
-    });
-  
-    contactLink.addEventListener('click', function(event) {
-      event.preventDefault();
-      fetchData("https://ait-1.onrender.com/api/allcontacts", contactContainer);
-      enquiryContainer.style.display = "none";
-      contactContainer.style.display = "block";
-    });
+      const enquiryContainer = document.getElementById(
+        "enquiryDetailsContainer"
+      );
+      const contactContainer = document.getElementById("contactusContainer");
 
-    // Function to render data in tables
-    function renderDataInTable(data, container) {
-      // Clear previous data
-      container.innerHTML = "";
+      const enquiryLink = document.querySelector(
+        'a[href="#enquiryDetailsContainer"]'
+      );
+      const contactLink = document.querySelector(
+        'a[href="#contactusContainer"]'
+      );
 
-      // Create table element
-      const table = document.createElement("table");
-      table.classList.add("table");
-
-      // Create table header
-      const thead = document.createElement("thead");
-      const headerRow = document.createElement("tr");
-
-      // Determine headers based on the first item in the data array
-      const headers = Object.keys(data[0]);
-
-      // Create table header cells
-      headers.forEach((header) => {
-        const th = document.createElement("th");
-        th.textContent = header;
-        headerRow.appendChild(th);
+      enquiryLink.addEventListener("click", function (event) {
+        event.preventDefault();
+        fetchData(
+          "https://ait-1.onrender.com/api/allenquiries",
+          enquiryContainer
+        );
+        contactContainer.style.display = "none";
+        enquiryContainer.style.display = "block";
       });
 
-      // Append header row to thead
-      thead.appendChild(headerRow);
+      contactLink.addEventListener("click", function (event) {
+        event.preventDefault();
+        fetchData(
+          "https://ait-1.onrender.com/api/allcontacts",
+          contactContainer
+        );
+        enquiryContainer.style.display = "none";
+        contactContainer.style.display = "block";
+      });
 
-      // Append thead to table
-      table.appendChild(thead);
+      // Function to render data in tables
+      function renderDataInTable(data, container) {
+        // Clear previous data
+        container.innerHTML = "";
 
-      // Create table body
-      const tbody = document.createElement("tbody");
+        // Create table element
+        const table = document.createElement("table");
+        table.classList.add("table");
+        table.classList.add("table-striped");
+        table.classList.add("table-hover");
+        table.classList.add("table-bordered");
 
-      // Populate table body with data rows
-      data.forEach((item) => {
-        const row = document.createElement("tr");
+        // Create table header
+        const thead = document.createElement("thead");
+        const headerRow = document.createElement("tr");
+
+        // Determine headers based on the first item in the data array
+        const headers = Object.keys(data[0]);
+
+        // Create table header cells
         headers.forEach((header) => {
-          const cell = document.createElement("td");
-          cell.textContent = item[header];
-          row.appendChild(cell);
+          const th = document.createElement("th");
+          th.textContent = header;
+          headerRow.appendChild(th);
         });
-        tbody.appendChild(row);
-      });
 
-      // Append tbody to table
-      table.appendChild(tbody);
+        // Append header row to thead
+        thead.appendChild(headerRow);
 
-      // Create a wrapper div with Bootstrap class for responsiveness
-      const tableWrapper = document.createElement("div");
-      tableWrapper.classList.add("table-responsive");
-      tableWrapper.appendChild(table);
+        // Append thead to table
+        table.appendChild(thead);
 
-      // Append table to container
-      container.appendChild(tableWrapper);
-    }
+        // Create table body
+        const tbody = document.createElement("tbody");
 
-    // Update fetchData function to render data in tables
-    function fetchData(url, container) {
-      fetch(url)
-        .then((response) => response.json())
-        .then((data) => {
-          if (data.success) {
-            if (container === enquiryContainer) {
-              renderDataInTable(data.data, enquiryContainer);
-              contactContainer.style.display = "none";
-              enquiryContainer.style.display = "block";
-            } else if (container === contactContainer) {
-              renderDataInTable(data.contactdata, contactContainer);
-              enquiryContainer.style.display = "none";
-              contactContainer.style.display = "block";
+        // Populate table body with data rows
+        data.forEach((item) => {
+          const row = document.createElement("tr");
+          headers.forEach((header) => {
+            const cell = document.createElement("td");
+            cell.textContent = item[header];
+            row.appendChild(cell);
+          });
+          tbody.appendChild(row);
+        });
+
+        // Append tbody to table
+        table.appendChild(tbody);
+
+        // Create a wrapper div with Bootstrap class for responsiveness
+        const tableWrapper = document.createElement("div");
+        tableWrapper.classList.add("table-responsive");
+        tableWrapper.appendChild(table);
+
+        // Append table to container
+        container.appendChild(tableWrapper);
+      }
+
+      // Update fetchData function to render data in tables
+      function fetchData(url, container) {
+        fetch(url)
+          .then((response) => response.json())
+          .then((data) => {
+            if (data.success) {
+              if (container === enquiryContainer) {
+                renderDataInTable(data.data, enquiryContainer);
+                contactContainer.style.display = "none";
+                enquiryContainer.style.display = "block";
+              } else if (container === contactContainer) {
+                renderDataInTable(data.contactdata, contactContainer);
+                enquiryContainer.style.display = "none";
+                contactContainer.style.display = "block";
+              }
+            } else {
+              console.error(
+                `Failed to fetch data for ${container.id}:`,
+                data.error
+              );
             }
-          } else {
-            console.error(`Failed to fetch data for ${container.id}:`, data.error);
-          }
-        })
-        .catch((error) => {
-          console.error(`Error fetching data for ${container.id}:`, error);
-        });
-    }
-  </script>
-</body>
+          })
+          .catch((error) => {
+            console.error(`Error fetching data for ${container.id}:`, error);
+          });
+      }
+    </script>
+  </body>
 </html>
